--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,7 @@
 @import url(_poltronas.css);
 @import url(_films-cartaz.css);
 @import url(_ticket.css);
+@import url(_sideart.css);
 @import url(_bomboniere.css);
 @import url(_pagamento.css);
 @import url(_footer.css);
